@@ -1,3 +1,12 @@
+2003-02-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* include/structs.h (OSVERSIONINFOEXA): Expand definition of
+	OSVERSIONINFOA.
+	(OSVERSIONINFOEXW): Expand definition of OSVERSIONINFOW.
+	* lib/msafd/misc/helpers.c (LocateHelperDLL): Cast AddressFamily,
+	SocketType, and Protocol to INT.
+	* lib/ws2_32/misc/catalog.c (LocateProvider): Ditto.
+
 2003-01-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ntoskrnl/dbg/profile.c (KdbProfilerThreadMain): Make STDCALL.
